# flaskWebDevelopment

./: README.md  main.py  pyproject.toml
templates/: base.html  index.html  survey.html  time.html  user.html
templates/errors/: 404.html  500.html
templates/macros/: macro.html
templates/outdated/: 1_base.html  2_base_bootstrap.html
