[tool.poetry]
name = "originalmotherlyboolean"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
MarkupSafe = "^1.1.1"
Flask-Bootstrap = "^3.3.7"
Flask-Script = "^2.0.6"
Flask-Moment = "^0.10.0"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
